# Shannon

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  ===最终完成报告===.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_LOGGING_IMPLEMENTATION_COMPLETE.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Cargo.toml  DEEP_RESEARCH_TIMEOUT_FIX_FINAL.md  DESKTOP_CONNECTION_FIX_SUMMARY.md  ENGINEERING_ANALYSIS.md  ENGINEER_FRAMEWORK_GUIDE.md  ENHANCED_METRICS_REPORT.md  FINAL_ENHANCEMENT_SUMMARY.md  FINAL_WORK_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MERGE_SUCCESS_REPORT.md  Makefile  PRE_PUSH_QUALITY_REPORT.md  PR_DESCRIPTION.md  QUICK_START_DEVTOOLS.md  README.md  README_PR_REVIEW_RESULTS.md  RELEASING.md  RESEARCH_JOB_FAILURE_ANALYSIS.md  TAURI_DEVTOOLS_AND_API_FIX.md  TIMEOUT_FIX_IMPLEMENTATION.md  TIMEOUT_FIX_IMPLEMENTATION_V2.md  TIMEOUT_FIX_SUCCESS_REPORT.md  WARP.md  WORK_COMPLETION_SUMMARY.md  __完成报告__请先阅读.md  data_analysis_agent.py  final_test.py  (+7 more)
.claude/: settings.json
.codex/: auth.json  config.toml  history.jsonl  version.json
benchmarks/: .gitignore  CONTRIBUTING.md  README.md  compare_baseline.sh  config.py  generate_report.sh  load_test.py  pattern_bench.py  run_benchmarks.sh  tool_bench.py  visualize.py  workflow_bench.py
config/: README.md  agent.yaml  agents.yaml  citation_credibility.yaml  features.yaml  models.yaml  openai_models.yaml  personas.yaml  research_strategies.yaml  shannon-policy-test.yaml  shannon-test.yaml  shannon.yaml
desktop/: .editorconfig  .env.local.example  CONFIGURATION.md  DEBUGGING_SETUP_COMPLETE.md  DEBUG_GUIDE.md  EMBEDDED_API_STARTUP.md  EMBEDDED_API_TROUBLESHOOTING.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  README.md  (+12 more)
desktop/src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: embedded_api.rs  embedded_port.rs  ipc_events.rs  ipc_logger.rs  lib.rs  workflow.rs
desktop/src-tauri/tests/: embedded_port_fallback.rs  embedded_startup.rs  hybrid_integration.rs  lancedb_integration.rs  log_buffering.rs  workflow_commands.rs
desktop/src-tauri/tests/fixtures/: embedded-api.yaml
desktop/src-tauri/tests/support/: mod.rs
rust/agent-core/: Cargo.toml  Dockerfile  README.md  build.rs
rust/agent-core/examples/: wasi_hello.rs
rust/agent-core/src/: checkpoint.rs  config.rs  enforcement.rs  firecracker_client.rs  grpc_server.rs  lib.rs  llm_client.rs  main.rs  memory.rs  memory_manager.rs  metrics.rs  research_pool.rs  safe_commands.rs  sandbox.rs  sandbox_service.rs  tool_cache.rs  tool_registry.rs  tools.rs  tracing.rs  wasi_sandbox.rs  workspace.rs
rust/agent-core/tests/: integration_python_rust.rs  test_sandbox_service.rs  test_wasm_cache.rs  tool_calls_sequence.rs
rust/durable-shannon/: Cargo.toml
rust/durable-shannon/src/: lib.rs
rust/durable-shannon/src/activities/: llm.rs  mod.rs  tools.rs
rust/durable-shannon/src/backends/: mod.rs  sqlite.rs  surrealdb.rs
rust/durable-shannon/src/microsandbox/: error.rs  mod.rs  policy.rs  wasm_sandbox.rs
rust/durable-shannon/src/worker/: cache.rs  checkpoint.rs  mod.rs
rust/durable-shannon/tests/activities/: llm_test.rs  tools_test.rs
rust/durable-shannon/tests/worker/: checkpoint_test.rs
rust/firecracker-executor/: Cargo.toml
rust/firecracker-executor/src/: api.rs  config.rs  lib.rs  main.rs  manager.rs  vm.rs
rust/shannon-api/: Cargo.toml  Dockerfile  README.md  build.rs
rust/shannon-api/benches/: cold_start_bench.rs  event_throughput_bench.rs  memory_bench.rs  task_latency_bench.rs
rust/shannon-api/memory/: 000031.sst  000034.sst  IDENTITY  LOG  LOG.old.1767938659811329  LOG.old.1767938669989741  LOG.old.1767938670055780  LOG.old.1767938670082773  MANIFEST-000036  OPTIONS-000030
rust/shannon-api/src/: lib.rs  logging.rs  main.rs  server.rs
rust/shannon-api/src/api/: chat.rs  health.rs  mod.rs  runs.rs
rust/shannon-api/src/config/: deployment.rs  error.rs  mod.rs  validator.rs
rust/shannon-api/src/database/: encryption.rs  hybrid.rs  mod.rs  repository.rs  schema.rs  settings.rs  workflow_store.rs
rust/shannon-api/src/domain/: memory.rs  mod.rs  runs.rs  tasks.rs  tools.rs
rust/shannon-api/src/events/: mod.rs
rust/shannon-api/src/gateway/: auth.rs  embedded_auth.rs  grpc_client.rs  idempotency.rs  mod.rs  rate_limit.rs  routes.rs  schedules.rs  sessions.rs  settings.rs  streaming.rs  tasks.rs
rust/shannon-api/src/llm/: mod.rs  orchestrator.rs
rust/shannon-api/src/llm/providers/: anthropic.rs  mod.rs  openai.rs
rust/shannon-api/src/proto/: mod.rs  shannon.common.rs  shannon.orchestrator.rs
rust/shannon-api/src/runtime/: manager.rs  mod.rs
rust/shannon-api/src/scheduler/: cron.rs  executor.rs  mod.rs
rust/shannon-api/src/tools/: cache.rs  mod.rs  registry.rs  security.rs
rust/shannon-api/src/workflow/: advanced.rs  control.rs  engine.rs  mod.rs  multiagent.rs  task.rs  tracking.rs
rust/shannon-api/src/workflow/embedded/: circuit_breaker.rs  engine.rs  event_bus.rs  export.rs  import.rs  mod.rs  optimizations.rs  recovery.rs  replay.rs  router.rs  session.rs
rust/shannon-api/src/workflow/patterns/: base.rs  chain_of_thought.rs  debate.rs  mod.rs  react.rs  reflection.rs  research.rs  tree_of_thoughts.rs
rust/shannon-api/tests/: e2e_api_keys.rs  e2e_streaming.rs  e2e_task_lifecycle.rs  embedded_server_test.rs  phase4_integration_test.rs
rust/shannon-api/tests/workflow/compatibility/: api_contract_test.rs  cloud_comparison_test.rs  event_schema_test.rs
rust/shannon-api/tests/workflow/e2e/: control_operations_test.rs  mod.rs  simple_task_test.rs
rust/shannon-api/tests/workflow/integration/: control_test.rs  engine_test.rs  error_recovery_test.rs  export_import_test.rs  replay_test.rs  streaming_test.rs
rust/shannon-api/tests/workflow/unit/: pattern_registry_test.rs
rust/workflow-patterns/: Cargo.toml  build.rs
rust/workflow-patterns/src/: chain_of_thought.rs  debate.rs  lib.rs  react.rs  reflection.rs  research.rs  tree_of_thoughts.rs
rust/workflow-patterns/src/research/: coverage.rs  deep_research.rs  verification.rs
(+952 files in other folders)
