[workspace]
resolver = "2"

members = [
    "rust/shannon-api",
    "rust/durable-shannon",
    "rust/agent-core",
    "rust/workflow-patterns",
    "desktop/src-tauri",
]

# Unified dependency versions to prevent conflicts
[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full", "process"] }
tokio-stream = { version = "0.1", features = ["net", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Web framework
axum = { version = "0.8.8", features = ["multipart", "macros", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "timeout", "compression-gzip"] }

# HTTP client - updated to 0.13 to match agent-core requirements
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream", "rustls", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"  # Using stable version - bincode 3.0.0 is intentionally broken

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Database backends (unified versions to prevent conflicts)
# SurrealDB for embedded desktop mode
surrealdb = { version = "2.2", features = ["kv-rocksdb"] }

# SQLite for embedded mobile mode - UNIFIED VERSION
rusqlite = { version = "0.38.0", features = ["bundled"] }

# PostgreSQL for cloud mode - COMMENTED OUT to prevent SQLite conflict
# When needed, use in separate cloud-only workspace member
# sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
# pgvector = { version = "0.4", features = ["sqlx"] }

# Redis (sessions, rate limiting, idempotency)
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }

# gRPC (for orchestrator communication)
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }

# Authentication (Gateway)
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = { version = "0.5" }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.9"
pin-project-lite = "0.2"
parking_lot = "0.12"
base64 = "0.22"
rand = "0.9.2"

# Configuration
config = "0.15.19"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Rate limiting
governor = { version = "0.10", features = ["std", "jitter", "quanta"] }

# Performance allocator
mimalloc = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
# OpenTelemetry - using agent-core's versions for compatibility
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# WASM runtime for workflow execution - updated to match agent-core
wasmtime = { version = "40.0.1", features = ["component-model", "async", "cranelift"] }
wasmtime-wasi = "40.0.1"
wasi-common = "40.0.1"

# Tauri framework (for desktop app)
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

# Build dependencies
tonic-prost-build = { version = "0.14.2" }
protoc-bin-vendored = "3"
tauri-build = { version = "2.5.1", features = [] }

# Dev dependencies
axum-test = "18"
tokio-test = "0.4"
serial_test = "3"

# Additional dependencies for agent-core
regex = "1.12.2"
serde_yaml = "0.9.34"
meval = "0.2"
http = "1.4.0"
prometheus = "0.14.0"
hyper = { version = "1.8.1", features = ["server", "http1"] }
http-body-util = "0.1"
opa-wasm = "0.1.9"
libc = "0.2.180"
crossbeam-channel = "0.5"
tonic-reflection = "0.14.2"
tempfile = "3.24.0"

# Dev dependencies
criterion = "0.8.1"
proptest = "1.9.0"

# Internal crate dependencies
shannon-api = { path = "rust/shannon-api", default-features = false }
durable-shannon = { path = "rust/durable-shannon" }
agent-core = { path = "rust/agent-core" }

# Rust compiler lints (Microsoft Pragmatic Rust Guidelines)
[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

# Clippy lints (Microsoft Pragmatic Rust Guidelines)
[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Restriction lints for consistency and quality
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
undocumented_unsafe_blocks = "warn"
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"