[package]
name = "shannon-desktop"
version = "0.1.0"
description = "Planet Desktop - AI Platform Client with Embedded Mode Support"
authors = ["Travis James"]
license = "MIT"
repository = "https://github.com/Prometheus-AGS/Shannon"
edition = "2021"
rust-version = "1.91.1"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ============================================================================
# FEATURES
# ============================================================================

[features]
default = ["desktop"]

# Desktop mode: SQLite + sqlite-vec for embedded database + full sync capabilities
desktop = [
    "dep:shannon-api",
    "dep:tokio",
    "dep:rusqlite",
    "dep:usearch",
    "dep:reqwest",
    "dep:axum",
    "dep:thiserror",
    "dep:futures",
    "dep:tracing-subscriber",
    # Future: "sync",
]

# Mobile mode: SQLite + sync capabilities (lighter weight)
# Mobile mode: LanceDB (if supported on mobile) or fallback
mobile = [
    "dep:shannon-api",
    "dep:tokio",
    # "dep:rusqlite",
    # Future: "sync",
]

# iOS-specific configuration (built via tauri ios command)
ios = ["mobile"]

# Android-specific configuration (built via tauri android command)
android = ["mobile"]

# Sync features (P2P mesh network)
# Commented until shannon-sync crate is implemented
# sync = ["dep:shannon-sync", "dep:yrs", "dep:webrtc"]

# Cloud mode: connect to remote Shannon API (no embedded features)
cloud = ["dep:reqwest"]

# Development/debug features
devtools = ["tauri/devtools"]

# ============================================================================
# BUILD DEPENDENCIES
# ============================================================================

[build-dependencies]
tauri-build = { workspace = true }

# ============================================================================
# DEPENDENCIES
# ============================================================================

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

# Tauri framework
tauri = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-store = { workspace = true }

# Shannon core (embedded mode - no grpc/orchestrator needed)
shannon-api = { workspace = true, default-features = false, features = ["embedded", "gateway"], optional = true }

# Async runtime
tokio = { workspace = true, features = ["net", "time", "rt-multi-thread", "macros"], optional = true }

# Web server for embedded API
axum = { workspace = true, optional = true }

# Embedded database backends
rusqlite = { workspace = true, optional = true }
usearch = { version = "2.14", optional = true }
# sqlite-vec is replaced by usearch

# HTTP client for cloud mode
reqwest = { workspace = true, optional = true }

# Future: Sync dependencies (P2P mesh)
# shannon-sync = { path = "../../rust/shannon-sync", optional = true }
# yrs = { version = "0.18", optional = true }
# webrtc = { version = "0.10", optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
parking_lot = { workspace = true }
once_cell = "1.19"
async-trait = "0.1"

# ============================================================================
# PLATFORM-SPECIFIC DEPENDENCIES
# ============================================================================

[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific dependencies will be added as needed

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies will be added as needed

# ============================================================================
# RUST LINTS (Microsoft Pragmatic Rust Guidelines)
# ============================================================================

# Use workspace lints
[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
