[package]
name = "shannon-agent-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "shannon_agent_core"
path = "src/lib.rs"

[features]
default = ["wasi"]
wasi = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasi-common"]
microvm = []
default-no-wasi = []

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# WASM runtime (optional, gated behind wasi feature)
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasi-common = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }

# Math evaluation
meval = { workspace = true }

# HTTP client
reqwest = { workspace = true }
http = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Metrics
prometheus = { workspace = true }
hyper = { workspace = true }
tokio-util = { workspace = true }
http-body-util = { workspace = true }

# Redis (optional distributed rate limiting)
redis = { workspace = true }

# Memory management
bytes = { workspace = true }

# Policy engine (OPA)
opa-wasm = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }

# System integration (for resource limits)
libc = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Parking lot scheduler for worker pools
# prometheus_parking_lot = { git = "https://github.com/Prometheus-AGS/prometheus-parking-lot-rs", features = ["tokio-runtime", "config"] }

# Channel for mailbox pattern
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

# Serialization for checkpoints
bincode = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }

# Use workspace lints
[lints]
workspace = true
