[package]
name = "durable-shannon"
version = "0.1.0"
edition = "2021"
description = "Shannon-specific extensions to the Durable workflow engine"
authors = ["Shannon Team"]
repository = "https://github.com/Prometheus-AGS/Shannon"
license = "MIT"
keywords = ["workflow", "durable", "wasm", "embedded"]
categories = ["asynchronous", "wasm"]

[lib]
name = "durable_shannon"
path = "src/lib.rs"

[features]
default = ["surrealdb-backend"]
surrealdb-backend = ["dep:surrealdb"]
postgresql-backend = ["dep:sqlx"]
embedded-worker = []

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"

# HTTP client for activities
reqwest = { version = "0.12", features = ["json"] }

# Synchronization
parking_lot = "0.12"

# SurrealDB backend (optional)
surrealdb = { version = "2.2", features = ["kv-rocksdb"], optional = true }

# PostgreSQL backend (optional)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

# Channel for event streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# WASM runtime for workflow execution
wasmtime = { version = "28.0", optional = true }
wasmtime-wasi = { version = "28.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

# Rust compiler lints (Microsoft Pragmatic Rust Guidelines)
[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

# Clippy lints (Microsoft Pragmatic Rust Guidelines)
[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
undocumented_unsafe_blocks = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
