[package]
name = "durable-shannon"
version = "0.1.0"
edition = "2021"
description = "Shannon-specific extensions to the Durable workflow engine"
authors = ["Shannon Team"]
repository = "https://github.com/Prometheus-AGS/Shannon"
license = "MIT"
keywords = ["workflow", "durable", "wasm", "embedded"]
categories = ["asynchronous", "wasm"]

[lib]
name = "durable_shannon"
path = "src/lib.rs"

[features]
default = ["embedded-worker"]
# surrealdb-backend = ["dep:surrealdb"]
# postgresql-backend = ["dep:sqlx"]  # DISABLED due to SQLite conflict
embedded-worker = []

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

# HTTP client for activities
reqwest = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# SurrealDB backend (optional)
# SurrealDB backend (optional) - REMOVED
# surrealdb = { workspace = true, optional = true }

# PostgreSQL backend (optional) - COMMENTED OUT due to SQLite conflict
# sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }

# Channel for event streaming
tokio-stream = { workspace = true }

# WASM runtime for workflow execution
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasi-common = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

# Use workspace lints
[lints]
workspace = true
