[package]
name = "firecracker-executor"
version = "0.2.0"
edition = "2021"
description = "Firecracker microVM executor for Shannon Python sandbox"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"

[build-dependencies]
tonic-build = "0.12"
