[package]
name = "shannon-api"
version = "0.1.0"
edition = "2021"
description = "Unified Rust API for Shannon AI platform - Gateway + LLM Service"
authors = ["Shannon Team"]
repository = "https://github.com/Prometheus-AGS/Shannon"
license = "MIT"
keywords = ["ai", "llm", "gateway", "api"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "shannon_api"
path = "src/lib.rs"

[[bin]]
name = "shannon-api"
path = "src/main.rs"

[features]
default = ["gateway", "grpc"]
gateway = ["dep:jsonwebtoken", "dep:argon2"]
grpc = ["dep:tonic", "dep:prost", "dep:prost-types"]
database = ["dep:sqlx", "dep:pgvector"]
# Embedded mode for Tauri desktop/mobile - uses local Durable workflow engine
# No orchestrator or Temporal required in this mode
embedded = ["dep:surrealdb", "dep:durable-shannon"]
# Mobile embedded mode with SQLite
embedded-mobile = ["dep:rusqlite", "dep:durable-shannon"]
# Cloud mode with full infrastructure - uses Temporal via orchestrator
cloud = ["grpc", "database"]

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["multipart", "macros", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "timeout", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-tungstenite = "0.28.0"

# HTTP client for LLM APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }

# MCP client (official Rust SDK)
rmcp = { version = "0.12.0", features = [
  "client",
  "transport-child-process",
], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Performance allocator
mimalloc = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "trace"] }
tracing-opentelemetry = "0.32.0"

# Database (PostgreSQL - matches Shannon's existing infra)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# Redis (sessions, rate limiting, idempotency)
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }

# gRPC (for orchestrator communication)
tonic = { version = "0.14.2", optional = true }
prost = { version = "0.14.1", optional = true }
prost-types = { version = "0.14.1", optional = true }

# Authentication (Gateway)
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"], optional = true }
argon2 = { version = "0.5", optional = true }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.9"
pin-project-lite = "0.2"
parking_lot = "0.12"
base64 = "0.22"
rand = "0.9.2"

# Configuration
config = "0.15.19"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Rate limiting
governor = { version = "0.10", features = ["std", "jitter", "quanta"] }

# Embedded database (for desktop/mobile mode)
surrealdb = { version = "2.2", features = ["kv-rocksdb"], optional = true }

# SQLite for mobile (lighter weight)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

# Durable workflow engine (for embedded mode - no orchestrator needed)
durable-shannon = { path = "../durable-shannon", optional = true }

[build-dependencies]
tonic-build = { version = "0.14.2" }
protoc-bin-vendored = "3"

[dev-dependencies]
axum-test = "18"
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"

# Rust compiler lints (Microsoft Pragmatic Rust Guidelines)
[lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

# Clippy lints (Microsoft Pragmatic Rust Guidelines)
[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# Restriction lints for consistency and quality
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
undocumented_unsafe_blocks = "warn"
# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
